# kittyhawk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NORTH_STAR.md  README.md
archive/: README.md
archive/docs/: REDTEAM_FIXES.md
archive/m4t/docs/: M4T_CONTRACT.md  M4T_PIPELINE.md  M4T_REDTEAM.md  TRIT_LATTICE_LSH.md
archive/m4t/src/: m4t_mtfp.c  m4t_mtfp_nonlinear.c  m4t_mtfp_w.h  m4t_ops.c  m4t_ops.h
archive/m4t/tests/: test_m4t_mtfp_w.c
archive/reference-code/native/: CMakeLists.txt  test_types.c
archive/reference-code/native/src/: trix_atoms.h  trix_mtfp.c  trix_neon.h  trix_routed_block.h  trix_routed_mixer.c  trix_routed_mixer.h  trix_routed_mixer_causal.c  trix_routed_mixer_causal.h  trix_routed_proj.c  trix_routed_proj.h  trix_surgery.h  trix_ternary_matmul.c  trix_ternary_matmul.h  trix_ternary_matvec.c  trix_ternary_route.h
archive/reference-code/native/tests/: test_attack2_bypass.c  test_lm_inspect.c  test_mtfp.c  test_routed_lm.c  test_ternary_mnist.c  test_ternary_mnist_errors.c  test_ternary_route_fair.c  test_training_debug.c
archive/tools/: mnist_knn_lattice.c
docs/: DYNAMIC_NPROJ.md  FINDINGS.md  HYPERPARAMETERS.md  LATTICE_GEOMETRY_RESOLVER.md  LIBGLYPH.md  REMEDIATION_PLAN.md  THESIS.md
journal/: amplification_negative_result.md  base3_native_criterion_nodes.md  base3_native_criterion_raw.md  base3_native_criterion_reflect.md  base3_native_criterion_synthesize.md  break_97_nproj16_nodes.md  break_97_nproj16_phase3_results.md  break_97_nproj16_raw.md  break_97_nproj16_reflect.md  break_97_nproj16_synthesize.md  cascade_atomics_mechanism.md  cascade_sweep_crossover.md  cifar10_50pct_nodes.md  cifar10_50pct_raw.md  cifar10_50pct_reflect.md  cifar10_50pct_synthesize.md  cifar10_nproj_ceiling.md  direct_lsh_production.md  dynamic_nproj_nodes.md  dynamic_nproj_raw.md  dynamic_nproj_reflect.md  dynamic_nproj_synthesize.md  fashion_mnist_atomics.md  fashion_mnist_density_sweep.md  fashion_mnist_first_light.md  ffn_bridge_nodes.md  ffn_bridge_raw.md  ffn_bridge_reflect.md  ffn_bridge_synthesize.md  full_experimental_record.md  full_matrix_sweep.md  full_scaling_curve.md  fully_routed_mnist.md  fused_filter_fix.md  gsh_lsh_concert_nodes.md  gsh_lsh_concert_raw.md  gsh_lsh_concert_reflect.md  gsh_lsh_concert_synthesize.md  knn_atomics_nodes.md  knn_atomics_raw.md  (+87 more)
m4t/: CMakeLists.txt  README.md
m4t/docs/: M4T_BEYOND.md  M4T_CONTRACT.md  M4T_PIPELINE.md  M4T_SUBSTRATE.md  TRIT_LATTICE_LSH.md
m4t/src/: m4t_internal.h  m4t_mtfp.c  m4t_mtfp.h  m4t_mtfp4.c  m4t_mtfp4.h  m4t_mtfp_w.c  m4t_mtfp_w.h  m4t_ops.h  m4t_route.c  m4t_route.h  m4t_ternary_matmul.c  m4t_ternary_matmul.h  m4t_trit_ops.c  m4t_trit_ops.h  m4t_trit_pack.c  m4t_trit_pack.h  m4t_trit_reducers.c  m4t_trit_reducers.h  m4t_types.h
m4t/tests/: test_m4t_mtfp.c  test_m4t_mtfp4.c  test_m4t_mtfp_w.c  test_m4t_ops.c  test_m4t_route.c  test_m4t_smoke.c  test_m4t_trit_ops.c  test_m4t_trit_pack.c  test_m4t_trit_reducers.c
m4t/tools/: m4t_bench.c  m4t_lut_gen.c  m4t_size_check.sh  m4t_trit_golden.c
reference-code/docs/: ARCHITECTURE.md  PRD_ZERO_DENSE_TRANSFORMER.md
reference-code/native/: README.md  test_neon.c  test_routing.c
reference-code/native/bench/: cascade_bench.c
reference-code/native/src/: trix_atoms.c  trix_compiled_dispatch.c  trix_compiled_dispatch.h  trix_mtfp.h  trix_rng.h  trix_routed_block.c  trix_surgery.c  trix_ternary_dot_chip.h  trix_ternary_matvec.h  trix_ternary_route.c  trix_types.h  trix_xor_compress.c  trix_xor_compress.h
reference-code/native/tests/: test_mixer_trace.c  test_native_atoms_smoke.c  test_routed_mixer.c  test_routed_proj.c  test_ternary_matvec.c  test_ternary_mnist_seeds.c  test_ternary_mnist_sweep.c  test_ternary_scale.c  test_ternary_vision.c
src/: glyph_bucket.c  glyph_bucket.h  glyph_config.c  glyph_config.h  glyph_dataset.c  glyph_dataset.h  glyph_internal.h  glyph_mtfp.c  glyph_mtfp.h  glyph_multiprobe.c  glyph_multiprobe.h  glyph_resolver.c  glyph_resolver.h  glyph_rng.c  glyph_rng.h  glyph_route.h  glyph_sig.c  glyph_sig.h  glyph_ternary_matmul.c  glyph_ternary_matmul.h  glyph_trit_pack.c  glyph_trit_pack.h  glyph_types.h
tests/: CMakeLists.txt  test_glyph_libglyph.c  test_glyph_mtfp_smoke.c  test_glyph_wrapper.c  test_multi_smoke.c
tools/: bruteforce_nproj.c  centroid_routed.c  cifar_seed_overlap.c  conv_lsh.c  direct_lsh.c  dynamic_nproj.c  fashion_atomics.c  ig_scored.c  inverted_ig.c  layered_lsh.c  mnist_cascade_atomics.c  mnist_cascade_nproj16.c  mnist_cascade_sweep.c  mnist_full_sweep.c  mnist_knn_lattice.c  mnist_local_v2.c  mnist_local_vs_global.c  mnist_lvg_atomics.c  mnist_m4t_infer.c  mnist_probe_nproj16.c  mnist_resolver_sweep.c  mnist_routed_amplified.c  mnist_routed_bucket.c  mnist_routed_bucket_multi.c  mnist_routed_knn.c  mnist_routed_lattice.c  mnist_routed_trace.c  mnist_routed_weighted.c  mnist_train_dump.c  mnist_trit_lattice.c  specialist_rerank.c  sstt_precog.c  structured_gsh.c  structured_lsh.c  subsetted_multi.c
